// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandPickedPostsBlockControls matches snapshot when the edit mode is false 1`] = `
<IfBlockEditSelected(BlockControlsFill)>
  <Toolbar
    controls={
      Array [
        Object {
          "icon": "edit",
          "isActive": false,
          "onClick": [Function],
          "title": "Edit",
        },
      ]
    }
  />
</IfBlockEditSelected(BlockControlsFill)>
`;

exports[`HandPickedPostsBlockControls matches snapshot when the edit mode is true 1`] = `
<IfBlockEditSelected(BlockControlsFill)>
  <Toolbar
    controls={
      Array [
        Object {
          "icon": "edit",
          "isActive": true,
          "onClick": [Function],
          "title": "Edit",
        },
      ]
    }
  />
</IfBlockEditSelected(BlockControlsFill)>
`;
